<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/item_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="GAME TITLE"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:textSize="12dp"
                    android:text="@string/details_button_save_button"
                    app:layout_constraintBottom_toTopOf="@+id/cover_imageview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/remove_button"
                    app:layout_constraintTop_toBottomOf="@+id/item_title_textview"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/cover_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="219dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/details_button_remove_button"
                    app:layout_constraintBottom_toBottomOf="@+id/save_button"
                    app:layout_constraintEnd_toStartOf="@+id/save_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_title_textview" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/game_details_platform_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/platform_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_release_date_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_esrb_rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/esrb_rating_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_developer_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/developer_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_publisher_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/publisher_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_genre_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genre_textview"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/game_details_description_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_textview"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:text="TextView" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Leave a Review"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/ReviewReviewEditText"
                        android:layout_width="260dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:hint="Comment"
                        />
                </TableRow>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/ReviewRatingSlider"
                        android:contentDescription="awdad"
                        android:valueFrom="0"
                        android:valueTo="5"
                        android:stepSize="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/sendReviewButton"
                        android:layout_marginStart="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text = "Submit"/>


                </LinearLayout>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_details_user_impression_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>